--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -79,10 +79,12 @@
     <!-- Onboarding Screen -->
     <!-- Notifications -->
     <!-- About, Help and Feedback and Settings -->
+    <!-- Advanced Features Settings -->
     <!-- Theming Options -->
     <!-- Scheduled Messages Screen -->
     <!-- Encryption -->
     <!-- Quick Reply -->
     <!-- Other -->
+    <!-- Times -->
     <!-- Purchase/Subscriptions -->
 </resources>
