--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -27,9 +27,10 @@
     <string name="menu_schedule">Mensajes programados</string>
     <string name="menu_mute_contacts">Lista Negra</string>
     <string name="menu_invite">Invitar amigos</string>
+    <string name="menu_feature_settings">Características  Avanzadas</string>
     <string name="menu_settings">Ajustes Generales</string>
     <string name="menu_account">Mi cuenta</string>
-    <string name="menu_device_texting">Texto desde cualquier dispositivo</string>
+    <string name="menu_device_texting">Mensajes de texto desde cualquier dispositivo</string>
     <string name="menu_help">Ayuda &amp; feedback</string>
     <string name="menu_about">Acerca de</string>
     <string name="menu_search">Busqueda</string>
@@ -54,6 +55,7 @@
     <string name="menu_snooze_8">8 horas</string>
     <string name="menu_snooze_24">24 horas</string>
     <string name="menu_snooze_72">72 horas</string>
+    <string name="menu_snooze_custom">Elige un momento</string>
     <!-- Empty Screen -->
     <string name="no_messages">No hay mensajes</string>
     <string name="no_messages_summary">Comienza una nueva conversación, o simplemente disfruta de tu día</string>
@@ -87,9 +89,9 @@
     <!-- Invite Friends Screen -->
     <string name="invite_friends_title">¿Te encanta Pulse?</string>
     <string name="invite_friends_summary">¡A Nosotros también! Estamos intentando conseguirlo pasarlo a 
-Tantas manos como podamos para seguir haciéndo el mejor producto que podamos e
-Invitando a tus amigos a probarlo , nos estás ayudando! \ N \ nSelecciona a los amigos debajo de
-A la que desea enviar la aplicación y le enviará un SMS con una breve descripción y
+Tantas manos como podamos para seguir haciendo el mejor producto que podamos e
+Invitando a tus amigos a probarlo , nos estás ayudando! \ N \ nSelecciona abajo a los amigos 
+a los que te gustaría enviar la aplicación y les enviaremos un SMS con una breve descripción y
 Un enlace para descargar!</string>
     <string name="invite_friends_sms">¡He empezado a usar una nueva app de mensajería, y he pensado 
 que te gustaría!. Pulse es gratuita, y puedes descargarla de aquí: http://messenger.klinkerapps.com</string>
@@ -206,6 +208,8 @@ Pulse pone tus conversaciones en el centro de todo."</string>
 pudieses encontrar!</string>
     <string name="faqs">Preguntas frequentes</string>
     <string name="features">Caracteristicas</string>
+    <string name="issues">Sistema de seguimiento de incidentes</string>
+    <string name="issues_summary">También sirve como hoja de ruta de características</string>
     <string name="google_plus">Google+</string>
     <string name="google_plus_summary">Comunidad Pulse beta</string>
     <string name="email">Correo electronico</string>
@@ -234,6 +238,13 @@ pudieses encontrar!</string>
     <string name="ringtone">Tono de llamada</string>
     <string name="group_name">Nombre del grupo</string>
     <string name="notification_settings">Notificaciones</string>
+    <string name="repeat_interval">Repetir alerta</string>
+    <string name="repeat_never">Nunca</string>
+    <string name="repeat_one_min">Cada minuto</string>
+    <string name="repeat_five_mins">Cada cinco minutos</string>
+    <string name="repeat_ten_mins">Cada diez minutos</string>
+    <string name="repeat_half_hour">Cada media hora</string>
+    <string name="repeat_hour">Cada hora</string>
     <string name="vibrate">Patrón de vibración</string>
     <string name="vibrate_off">Sin vibración</string>
     <string name="vibrate_default">Vibración por defecto</string>
@@ -290,6 +301,17 @@ que se base el contacto:</string>
     <string name="advanced">Avanzado</string>
     <string name="send_as_mms">Convertir a MMS</string>
     <string name="send_as_mms_summary">Los mensajes largos ser enviaran como MMS , en lugar de SMS individuales</string>
+    <string name="alert_types">Tipos de alertas</string>
+    <string name="alert_types_summary">Varias personalizaciones para las notificaciones</string>
+    <!-- Advanced Features Settings -->
+    <string name="signature">Firma</string>
+    <string name="signature_summary">NOTA: las firmas enviadas NO se mostrarán en la lista de mensajes de Pulse. Las firmas sólo se mostrarán al receptor del mensaje.</string>
+    <string name="cleanup_old_messages">Limpieza de mensajes antiguos</string>
+    <string name="delayed_sending">Envio retrasado</string>
+    <string name="quick_compose">Composición rápida</string>
+    <string name="quick_compose_summary">Notificación siempre activa para conseguir la manera mas rápida de componer de un nuevo mensaje.</string>
+    <string name="secure_private_conversations">Conversaciones privadas seguras</string>
+    <string name="secure_private_conversations_summary">Requerir PIN para desbloquear conversaciones privadas</string>
     <!-- Theming Options -->
     <string name="day_night">Por defecto (Día/Noche)</string>
     <string name="always_light">Siempre claro</string>
@@ -341,6 +363,7 @@ abajo!</string>
     <string name="conversation_with">Conversación con %1$s</string>
     <string name="send">Enviar</string>
     <!-- Other -->
+    <string name="dashclock_description">Marcar la información de SMS/MMS como no leída</string>
     <string name="default_text">Por defecto</string>
     <string name="did_you_know">Lo sabías?</string>
     <string name="use_from_anywhere">Pulse se puede utilizar desde cualquier dispositivo conectado a internet- ¡ Pruébalo hoy!</string>
@@ -350,6 +373,22 @@ abajo!</string>
     <string name="renew">Renovar</string>
     <string name="no">No</string>
     <string name="cancel">Cancelar</string>
+    <string name="hours">Horas</string>
+    <string name="minutes">Minutos</string>
+    <string name="test">Test</string>
+    <string name="off">Apagar</string>
+    <!-- Times -->
+    <string name="five_seconds">Cinco Segundos</string>
+    <string name="ten_seconds">Diez segundos</string>
+    <string name="fifteen_seconds">Quince segundos</string>
+    <string name="thirty_seconds">Treinta segundos</string>
+    <string name="one_minute">Un minuto</string>
+    <string name="one_week">Una semana</string>
+    <string name="two_weeks">Dos semanas</string>
+    <string name="one_month">Un mes</string>
+    <string name="three_months">Tres meses</string>
+    <string name="six_months">Seis meses</string>
+    <string name="one_year">Un año</string>
     <!-- Purchase/Subscriptions -->
     <string name="no_subscription_found">¡No se ha encontrado subscripción!</string>
     <string name="cancelled_subscription_error">Parece que has cancelado tú suscripción.
