--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -217,7 +217,7 @@ Jakość Twoich rozmów jest dla Pulse\'a priorytetowa."</string>
     <string name="beta_disclaimer">Ten projekt jest nadal w fazie testowej. Jeśli znajdziesz jakikolwiek błąd proszę o informację!</string>
     <string name="faqs">FAQ - często zadawane pytania</string>
     <string name="features">Możliwości aplikacji</string>
-    <string name="issues">System zarządzania incydentami</string>
+    <string name="issues">Śledzenie błędów</string>
     <string name="issues_summary">Służy również jako przewodnik po możliwościach</string>
     <string name="google_plus">Google+</string>
     <string name="google_plus_summary">Społeczność Pulse Beta</string>
